Added https redirect

--- a/k8s-manifests/ingress.yml
+++ b/k8s-manifests/ingress.yml
@@ -1,4 +1,17 @@
 ---
+# Redirect to https
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: https-redirect
+  namespace: badstats
+spec:
+  redirectScheme:
+    scheme: https
+    port: "443"
+    permanent: true
+
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -7,6 +20,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    traefik.ingress.kubernetes.io/router.middlewares: badstats-https-redirect@kubernetescrd
 spec:
   tls:
   - hosts:
