--- a/k8s-manifests/badstats.yml
+++ b/k8s-manifests/badstats.yml
@@ -22,6 +22,9 @@ spec:
             limits:
               memory: "1000Mi"
               cpu: "1"
+            requests:
+              memory: "300Mi"
+              cpu: "200m"
           ports:
             - containerPort: 8080
           env:
