Updated pvc.yml for deployment with new Ki-Kluster storage provisioner.

--- a/k8s-manifests/pvc.yml
+++ b/k8s-manifests/pvc.yml
@@ -4,12 +4,10 @@ kind: PersistentVolumeClaim
 metadata:
   name: db-pvc
   namespace: badstats
-  annotations:
-    nfs.io/storage-path: "/badstats"
 spec:
-  storageClassName: nfs-client # managed-nfs-storage # nfs-client
+  storageClassName: local-path
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 4Gi
