Added Longhorn storage and replicas across nodes

--- a/k8s-manifests/pvc.yml
+++ b/k8s-manifests/pvc.yml
@@ -5,9 +5,9 @@ metadata:
   name: db-pvc
   namespace: badstats
 spec:
-  storageClassName: local-path
+  storageClassName: longhorn
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 4Gi
