--- a/k8s-manifests/badstats.yml
+++ b/k8s-manifests/badstats.yml
@@ -5,7 +5,7 @@ metadata:
   name: badstats
   namespace: badstats
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: badstats
@@ -14,6 +14,13 @@ spec:
       labels:
         app: badstats
     spec:
+      topologySpreadConstraints:
+      - maxSkew: 1
+        topologyKey: kubernetes.io/hostname
+        whenUnsatisfiable: ScheduleAnyway
+        labelSelector:
+          matchLabels:
+            app: badstats
       containers:
         - name: badstats
           image: kpuc1997/badstats:1.1.1
